--- a/css/style.css
+++ b/css/style.css
@@ -4761,3 +4761,9 @@ html.scroll-lock {
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none; }
+
+
+.card-img-top:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
