--- a/css/style.css
+++ b/css/style.css
@@ -4767,3 +4767,8 @@ html.scroll-lock {
   transform: scale(1.1);
   transition: 0.5s;
 }
+.img-fluid:hover{
+  transform: scale(1.1);
+  transition: 0.5s;
+
+}
